# pavona

./: .bazelrc  BLOCKFILE  BUILD.bazel  MODULE.bazel  README.md  SUMMARY.md  apt-requirements.txt  book.toml  pyproject.toml  yum-requirements.txt
.github/actions/dvsim/: action.yml
.github/actions/prepare-env/: action.yml
.github/workflows/: ci.yml  cla.yml  dv-all.yml  nightly.yml  weekly.yml
ci/jobs/: slow-lint.sh
ci/scripts/: check-ascii.sh  check-sim-cfgs.py  run-verilator-tests.sh  sw-build-test.sh
doc/: glossary.md
doc/contributing/ci/: README.md  faq.md
doc/contributing/fpga/: get_a_board.md
doc/contributing/hw/: vendor.md
doc/contributing/hw/checklist/: hw_checklist.md.tpl
doc/contributing/style_guides/: asm_coding_style.md  c_cpp_coding_style.md  dv_coding_style.md  verilog_coding_style.md
doc/contributing/sw/: device_interface_functions.md  guidance_for_volatile.md  rust_for_c_devs.md
doc/getting_started/: README.md  intro_hardware.md  intro_software.md  setup_dv.md  setup_fpga.md  setup_verilator.md
doc/security/cryptolib/: cryptolib_api.md
doc/security/specs/device_provisioning/: README.md
hw/: Makefile
hw/bitstream/: README.md
hw/bitstream/universal/: BUILD
hw/bitstream/vivado/: BUILD
hw/doc/: cores.md
hw/dv/: all_sim_cfgs.hjson
hw/dv/doc/: dv_doc_template.md
hw/dv/sv/cip_lib/: README.md
hw/dv/sv/dv_lib/: dv_base_env_cfg.sv  dv_base_monitor.sv  dv_base_sequencer.sv  dv_base_virtual_sequencer.sv  dv_callback.sv  dv_lib.core  dv_lib_pkg.sv  dv_monitor.sv  dv_pair.sv  dv_rst_safe_base_driver.sv  dv_rst_safe_base_monitor.sv  dv_sequencer_list.sv
hw/dv/sv/flash_phy_prim_agent/: flash_phy_prim_agent.core  flash_phy_prim_agent_pkg.sv  flash_phy_prim_driver.sv  flash_phy_prim_if.sv  flash_phy_prim_item.sv  flash_phy_prim_monitor.sv
hw/dv/tools/dvsim/: vcs.hjson
hw/ip/: BUILD  README.md
hw/ip/acc/data/: bignum-insns.yml  enc-schemes.yml
hw/ip/acc/util/: acc_as.py
hw/ip/adc_ctrl/doc/: programmers_guide.md
hw/ip/aon_timer/: README.md
hw/ip/aon_timer/data/: aon_timer.hjson  aon_timer_testplan.hjson
hw/ip/aon_timer/doc/: theory_of_operation.md
hw/ip/aon_timer/dv/: README.md
hw/ip/csrng/dv/: csrng_sim_cfg.hjson
hw/ip/edn/: README.md
hw/ip/edn/doc/: programmers_guide.md
hw/ip/flash_ctrl/rtl/: flash_ctrl_pkg.sv
hw/ip/flash_macro_wrapper/: BUILD  defs.bzl  flash_macro_wrapper.core  flash_macro_wrapper_pkg.core  flash_macro_wrapper_reg_top.core
hw/ip/flash_macro_wrapper/data/: BUILD  flash_macro_wrapper.hjson  flash_macro_wrapper_sec_cm_testplan.hjson
hw/ip/flash_macro_wrapper/rtl/: flash_macro_bank.sv  flash_macro_wrapper.sv  flash_macro_wrapper_pkg.sv  flash_macro_wrapper_reg_pkg.sv  flash_macro_wrapper_reg_top.sv
hw/ip/keymgr/: README.md
hw/ip/keymgr/data/: keymgr.hjson
hw/ip/keymgr/doc/: programmers_guide.md  theory_of_operation.md
hw/ip/keymgr/dv/: README.md  tb.sv
hw/ip/kmac/: README.md
hw/ip/kmac/data/: kmac.hjson
hw/ip/kmac/doc/: theory_of_operation.md
hw/ip/lc_ctrl/: README.md
hw/ip/pattgen/: README.md
hw/ip/prim/: prim_sha2.core
hw/ip/spi_host/: README.md
hw/ip_templates/flash_ctrl/: README.md.tpl  flash_ctrl.core.tpl  flash_ctrl_top_specific_pkg.core.tpl  flash_phy_macro_pkg.core.tpl  flash_phy_pkg.core.tpl
hw/top/doc/: create_top.md
hw/top_darjeeling/data/: top_darjeeling.hjson
hw/top_darjeeling/doc/: memory_map.md
hw/top_darjeeling/dv/: chip_darjeeling_sim_cfg.hjson  chip_rom_tests.hjson  top_darjeeling_sim_cfgs.hjson
hw/top_darjeeling/rtl/: chip_darjeeling_verilator.sv
hw/top_darjeeling/templates/: chiplevel.sv.tpl  toplevel.sv.tpl
hw/top_dragonfly/: BUILD  defs.bzl
hw/top_dragonfly/data/: chip_testplan.hjson
hw/top_dragonfly/doc/: datasheet.md
hw/top_dragonfly/dv/: chip_dragonfly_sim_cfg.hjson
hw/top_dragonfly/templates/: chiplevel.sv.tpl
hw/top_dragonfly/util/: vivado_hook_write_bitstream_pre.tcl
hw/top_earlgrey/: chip_earlgrey_asic.core  chip_earlgrey_cw310.core  chip_earlgrey_cw310_hyperdebug.core  chip_earlgrey_cw340.core  chip_earlgrey_verilator.core  top_earlgrey.core
hw/top_earlgrey/cdc/: cdc_waivers.data.tcl  cdc_waivers.w_masync.tcl
hw/top_earlgrey/data/: top_earlgrey.hjson  xbar_main.hjson
hw/top_earlgrey/doc/: memory_map.md
hw/top_earlgrey/dv/: chip_earlgrey_sim_cfg.hjson  top_earlgrey_sim_cfgs.hjson
hw/top_earlgrey/lint/: top_earlgrey_lint_cfgs.hjson
hw/top_earlgrey/templates/: toplevel.sv.tpl
hw/top_earlgrey/util/: vivado_hook_write_bitstream_pre.tcl
hw/top_egret/doc/: datasheet.md
hw/top_egret/dv/: README.md
hw/top_englishbreakfast/: chip_englishbreakfast_cw305.core  top_englishbreakfast.core
hw/top_englishbreakfast/data/: top_englishbreakfast.hjson  xbar_main.hjson
hw/top_englishbreakfast/doc/: memory_map.md
quality/: Doxyfile.lint
release/: BUILD
rfc/rfc-2026-XX-Versioning/: rfc_2026_XX_versioning.md
rules/: const.bzl  otbn.bzl
rules/pavona/: cc.bzl  exec_env.bzl  fpga.bzl  qemu.bzl  sim_dv.bzl  sim_verilator.bzl  splice.bzl
signing/: README.md
signing/examples/: BUILD
sw/acc/crypto/: ed25519.s  field25519.s  rsa_keygen.s  run_p256.s  run_p384.s  run_rsa_keygen.s  sha512_compact.s  sha512_interface.s  sha512_padding.s
sw/device/: README.md
sw/device/tests/: BUILD  power_virus_systemtest.c
sw/device/tock/: BUILD
sw/host/opentitanlib/: BUILD
sw/host/opentitantool/: BUILD
sw/otbn/crypto/: BUILD  modexp.s  montmul.s  p256_base.s  p384_base_mult.s  p384_isoncurve.s  run_ed25519.s  run_rsa_modexp.s
toolchain/: BUILD  README.md
util/: grade_regression_vcs.py  mdbook_acc.py
util/dashboard/: gen_dashboard_entry.py
util/design/: secded_gen.py
util/design/lib/: OtpMemMap.py
util/doc/: vendor.md
util/dvsim/: CfgFactory.py  Deploy.py  FlowCfg.py  SimCfg.py  dvsim.py  modes.py
util/dvsim/doc/: design_doc.md
util/ipgen/: README.md
util/reggen/: README.md  gen_dv.py
util/reggen/doc/: setup_and_use.md
util/site/: build-docs.sh  fetch_block_stats.py
util/site/book-theme/: dark-highlight.css
util/topgen/templates/: toplevel_memory.ld.tpl
util/uvmdvgen/: index.md.tpl
(+496 files in other folders)
