# Copyright lowRISC contributors (OpenTitan project).
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

module(name = "pavona_pavona")

# Dependencies:
bazel_dep(name = "abseil-cpp", version = "20240116.1")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "googletest", version = "1.14.0.bcr.1")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "rules_foreign_cc", version = "0.9.0")
bazel_dep(name = "rules_fuzzing", version = "0.5.2")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_python", version = "1.2.0")
bazel_dep(name = "rules_rust_bindgen", version = "0.59.2")
bazel_dep(name = "rules_rust_mdbook", version = "0.59.2")
bazel_dep(name = "rules_rust", version = "0.59.2")
bazel_dep(name = "toolchains_llvm", version = "1.7.0")

# Dev dependencies:
bazel_dep(
    name = "aspect_rules_lint",
    version = "1.2.2",
    dev_dependency = True,
)
bazel_dep(
    name = "buildifier_prebuilt",
    version = "6.4.0",
    dev_dependency = True,
)
bazel_dep(
    name = "lowrisc_misc_linters",
    dev_dependency = True,
)

# Overrides and patches:
single_version_override(
    module_name = "rules_cc",
    patch_strip = 1,
    patches = [
        "@pavona_pavona//third_party/cc/patches:remove_gold.patch",
    ],
    version = "0.2.18",
)

single_version_override(
    module_name = "rules_rust",
    patch_strip = 1,
    patches = [
        "@pavona_pavona//third_party/rust/patches:rules_rust.extra_rustc_toolchain_dirs.patch",
    ],
    version = "0.59.2",
)

single_version_override(
    module_name = "rules_rust_bindgen",
    patch_strip = 3,
    patches = [
        "@pavona_pavona//third_party/rust/patches:rules_rust.bindgen_static_lib.patch",
    ],
    version = "0.59.2",
)

single_version_override(
    module_name = "rules_foreign_cc",
    patches = [
        # Patch to remove all build log file output when using rules_foreign_cc
        # toolchains to ensure deterministic Bazel builds. See upstream issue:
        # https://github.com/bazel-contrib/rules_foreign_cc/issues/1313
        "@pavona_pavona//third_party/foreign_cc/patches:rules_foreign_cc.remove_log_output.patch",
    ],
    version = "0.9.0",
)

archive_override(
    module_name = "lowrisc_misc_linters",
    integrity = "sha256-eRFiSjD638NuOjDDScMuEKVYpmotDY0yX3jxYL/d3ac=",
    strip_prefix = "misc-linters-20250217_01",
    urls = ["https://github.com/lowRISC/misc-linters/archive/refs/tags/20250217_01.tar.gz"],
)

# Rust toolchain:
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.repository_set(
    name = "rust_host",
    edition = "2024",
    exec_triple = "x86_64-unknown-linux-gnu",
    sha256s = {
        "rustc-1.90.0-x86_64-unknown-linux-gnu.tar.xz": "48c2a42de9e92fcae8c24568f5fe40d5734696a6f80e83cc6d46eef1a78f13c9",
        "clippy-1.90.0-x86_64-unknown-linux-gnu.tar.xz": "5b6466419693a05365827378145014a37ae74fb2948fab390d5210a524792ed8",
        "cargo-1.90.0-x86_64-unknown-linux-gnu.tar.xz": "9853db03d68578a30972e2755c89c66aec035fec641cf8f3a7117c81eec2578d",
        "llvm-tools-1.90.0-x86_64-unknown-linux-gnu.tar.xz": "1376ef6021578fcfe94fad66396f7ca6d2f19bda5a417f8746a2b32ccf3f4470",
        "rust-std-1.90.0-x86_64-unknown-linux-gnu.tar.xz": "663f4ab7945b392d5e5294dec1b050a66820a20e86f084ec37eeb0f2f7ff5569",
    },
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_triple = "x86_64-unknown-linux-gnu",
    versions = ["1.90.0"],
)
rust.repository_set(
    name = "rust_host_aarch64",
    edition = "2024",
    exec_triple = "aarch64-unknown-linux-gnu",
    sha256s = {
        "rustc-1.90.0-aarch64-unknown-linux-gnu.tar.xz": "4e1a9987a11d7d91f0d5afbf5333feb62f44172e4a31f33ce7246549003217f2",
        "clippy-1.90.0-aarch64-unknown-linux-gnu.tar.xz": "1a7f969c5712c17d960d6fba8235b33f264a9484b369dc388766a540f1ba464f",
        "cargo-1.90.0-aarch64-unknown-linux-gnu.tar.xz": "bd8d1da6fe88ea7e29338f24277c22156267447adbfc47d690467ad32d02c2a7",
        "llvm-tools-1.90.0-aarch64-unknown-linux-gnu.tar.xz": "3f559ee41cf201a818630b1877e53ee0b9cd32793ee99c297ef56225a8aeafd6",
        "rust-std-1.90.0-aarch64-unknown-linux-gnu.tar.xz": "4952abb7d9d3ed7cea4f7ea44dcb23dc67631fae4ac44a5f059b90a4b5e9223f",
    },
    target_compatible_with = [
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
    ],
    target_triple = "aarch64-unknown-linux-gnu",
    versions = ["1.90.0"],
)
rust.repository_set(
    name = "rust_tock",
    edition = "2021",
    exec_triple = "x86_64-unknown-linux-gnu",
    sha256s = {
        "2023-07-30/rustc-nightly-x86_64-unknown-linux-gnu.tar.xz": "ecdee8821a57efbb699b7e3aa4cbfbd60b7970bce89a8cfb9bc7d65b9058ee42",
        "2023-07-30/clippy-nightly-x86_64-unknown-linux-gnu.tar.xz": "76ee5aac81d1348bfebd3d94d5fb65c3f4ea0cf5fc2de834926f93772547380c",
        "2023-07-30/cargo-nightly-x86_64-unknown-linux-gnu.tar.xz": "4ddb3ed2dd2acedf9097f4a1fe17b8cd571fdd7c9a49b1e31c228a284ec95049",
        "2023-07-30/llvm-tools-nightly-x86_64-unknown-linux-gnu.tar.xz": "dc71b9ae6a4a4b9fa259724b29f4ad19467197ced89a8aad675f5af112c4fb77",
        "2023-07-30/rust-std-nightly-riscv32imc-unknown-none-elf.tar.xz": "9790d50d4510443bbf4c13b68227a273345d28b84d29372bc5f5ea2d14d05f2d",
        "2023-07-30/rust-std-nightly-x86_64-unknown-linux-gnu.tar.xz": "b5a589a243923c5fa2a1f08e7b902bb0a64ae08010067b9074501a6e1fb8b042",
    },
    target_compatible_with = [
        "@platforms//cpu:riscv32",
    ],
    target_triple = "riscv32imc-unknown-none-elf",
    # For RISC-V toolchain, we currently don't support LLVM 16+ due to old binutils version.
    # Rust updated its LLVM 17 on 2023-08-08.
    versions = ["nightly/2023-07-30"],
)
rust.repository_set(
    name = "rust_tock_aarch64",
    edition = "2021",
    exec_triple = "aarch64-unknown-linux-gnu",
    sha256s = {
        "2023-07-30/rustc-nightly-aarch64-unknown-linux-gnu.tar.xz": "0de37244e50f6f0eb04064deecbd8a10f87f80de1adef26400db9bd1db0cb5f4",
        "2023-07-30/clippy-nightly-aarch64-unknown-linux-gnu.tar.xz": "effe90fefd5752065c5ee4c3d9db59c4ee3d2bb7f9bedfb3f56a440cb4582e27",
        "2023-07-30/cargo-nightly-aarch64-unknown-linux-gnu.tar.xz": "6d3a7f41e58e79801812b57df61f276ea6634873784166cccda9277805fc5d8b",
        "2023-07-30/llvm-tools-nightly-aarch64-unknown-linux-gnu.tar.xz": "471abc44bc0bbb81ee7b084e73060a8b149667a9bf208614e22a3a961dad0d9d",
        "2023-07-30/rust-std-nightly-riscv32imc-unknown-none-elf.tar.xz": "9790d50d4510443bbf4c13b68227a273345d28b84d29372bc5f5ea2d14d05f2d",
        "2023-07-30/rust-std-nightly-aarch64-unknown-linux-gnu.tar.xz": "a415f05a3ddc83caa7b5f0372159a1c07ea0b076f1ee66430692787b327fc30f",
    },
    target_compatible_with = [
        "@platforms//cpu:riscv32",
    ],
    target_triple = "riscv32imc-unknown-none-elf",
    # For RISC-V toolchain, we currently don't support LLVM 16+ due to old binutils version.
    # Rust updated its LLVM 17 on 2023-08-08.
    versions = ["nightly/2023-07-30"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

# Rust crates:
crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.from_cargo(
    name = "crate_index",
    cargo_lockfile = "//third_party/rust:Cargo.lock",
    manifests = ["//third_party/rust:Cargo.toml"],
    # By default rules_rust will analyze dependencies for all supported target triples, which is very slow.
    # Restrict to ones that we're interested in. See https://github.com/bazelbuild/rules_rust/issues/2876
    supported_platform_triples = [
        "aarch64-unknown-linux-gnu",
        "x86_64-unknown-linux-gnu",
    ],
)
crate.annotation(
    crate = "libudev-sys",
    patch_args = ["-p1"],
    patches = ["@pavona_pavona//third_party/rust/patches:libudev-sys-0.1.4.patch"],
    repositories = ["crate_index"],
)
crate.annotation(
    crate = "cryptoki",
    repositories = ["crate_index"],
)
crate.annotation(
    additive_build_file_content = """
        filegroup(
            name = "cryptoki-sys-binding-srcs",
            srcs = [
                "src/bindings/x86_64-unknown-linux-gnu.rs",
            ],
            visibility = ["//visibility:public"],
        )
    """,
    crate = "cryptoki-sys",
    extra_aliased_targets = {
        "cryptoki-sys-binding-srcs": "cryptoki-sys-binding-srcs",
    },
    repositories = ["crate_index"],
)
crate.annotation(
    build_script_env = {
        "PKG_CONFIG_PATH": "$(OPENSSL_PKG_CONFIG_PATH)",
        "OPENSSL_STATIC": "1",
    },
    build_script_toolchains = ["@pavona_pavona//third_party/rust:openssl_pkg_config_path"],
    crate = "openssl-sys",
    repositories = ["crate_index"],
)
use_repo(crate, "crate_index")

# mdbook (separate because it has a lot of dependencies):
crate.from_cargo(
    name = "mdbook_index",
    cargo_lockfile = "//third_party/mdbook:Cargo.lock",
    manifests = ["//third_party/mdbook:Cargo.toml"],
    supported_platform_triples = [
        "aarch64-unknown-linux-gnu",
        "x86_64-unknown-linux-gnu",
    ],
)
crate.annotation(
    crate = "mdbook",
    gen_binaries = ["mdbook"],
    patch_args = ["-p1"],
    patches = [
        "@pavona_pavona//third_party/mdbook/patches:mdbook-mdignore.patch",
    ],
    repositories = ["mdbook_index"],
)
use_repo(crate, "mdbook_index")

# Rust bindgen toolchain:
register_toolchains("//third_party/rust:bindgen_toolchain")

# LLVM toolchain used for host and device software.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_versions = {"": "22.1.2"},
    sha256 = {
        "linux-aarch64": "cf2e84d965a95954971cafc71d18c0eb38e723c3ac7276286fd5636df4374b3a",
        "linux-x86_64": "ff32497b6801267ee427bc69cdaeecfb2d19578af8c2a942e864c45215f9a2ac",
    },
    strip_prefix = {
        "linux-aarch64": "LLVM-22.1.2-Linux-ARM64",
        "linux-x86_64": "LLVM-22.1.2-Linux-X64",
    },
    urls = {
        "linux-aarch64": ["https://github.com/llvm/llvm-project/releases/download/llvmorg-22.1.2/LLVM-22.1.2-Linux-ARM64.tar.xz"],
        "linux-x86_64": ["https://github.com/llvm/llvm-project/releases/download/llvmorg-22.1.2/LLVM-22.1.2-Linux-X64.tar.xz"],
    },
)
use_repo(llvm, "llvm_toolchain")
use_repo(llvm, "llvm_toolchain_llvm")

# Device software toolchain.
register_toolchains("//toolchain:cc_toolchain_opentitan")

# Host software toolchain.
register_toolchains("@llvm_toolchain//:all")

# Python toolchain:
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    # Required because CI containers currently run as the `root` user.
    # We lose caching of `.pyc` files as a result.
    # See <https://github.com/bazelbuild/rules_python/pull/713>.
    ignore_root_user_error = True,
    is_default = True,
    python_version = "3.10",
)
use_repo(python, "pythons_hub")

register_toolchains("@pythons_hub//:all")

# We occasionally access the toolchain repositories directly to use interpreters.
use_repo(python, python3 = "python_3_10", python3_host = "python_3_10_host")

# Pip dependencies:
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "ot_python_deps",
    python_version = "3.10",
    requirements_lock = "//:python-requirements.txt",
)
use_repo(pip, "ot_python_deps")

################### originally from //third_party/tock:tock.MODULE.bazel

# Tock crates (must be separated to avoid them depending on `std`):
crate.from_cargo(
    name = "tock_index",
    cargo_lockfile = "//third_party/tock:Cargo.lock",
    manifests = ["//third_party/tock:Cargo.toml"],
    supported_platform_triples = [
        "riscv32imc-unknown-none-elf",
    ],
)
use_repo(crate, "tock_index")

# elf2tab crates (pulled directly using elf2tab's Cargo.toml/Cargo.lock files)
crate.from_cargo(
    name = "elf2tab_index",
    cargo_lockfile = "@elf2tab//:Cargo.lock",
    manifests = ["@elf2tab//:Cargo.toml"],
    supported_platform_triples = [
        "aarch64-unknown-linux-gnu",
        "x86_64-unknown-linux-gnu",
    ],
)
use_repo(crate, "elf2tab_index")

tock = use_extension("//third_party/tock:extensions.bzl", "tock")
use_repo(tock, "elf2tab", "libtock", "tock")

# Repository rules:
bitstreams_repo = use_repo_rule("//rules:bitstreams.bzl", "bitstreams_repo")

bitstreams_repo(name = "bitstreams")

nonhermetic_repo = use_repo_rule("//rules:nonhermetic.bzl", "nonhermetic_repo")

nonhermetic_repo(name = "nonhermetic")

# Source repositories (not Bazel-aware):
github_tools = use_extension("//third_party/github:extensions.bzl", "github_tools")
use_repo(github_tools, "com_github_gh")

lychee = use_extension("//third_party/lychee:extensions.bzl", "lychee")
use_repo(lychee, "lychee")

serde_annotate = use_extension("//third_party/rust:extensions.bzl", "serde_annotate")
use_repo(serde_annotate, "lowrisc_serde_annotate")

shellcheck = use_extension("//third_party/shellcheck:extensions.bzl", "shellcheck")
use_repo(shellcheck, "shellcheck")

openocd = use_extension("//third_party/openocd:extensions.bzl", "openocd")
use_repo(openocd, "openocd")

freertos = use_extension("//third_party/freertos:extensions.bzl", "freertos")
use_repo(freertos, "freertos")

riscv_compliance = use_extension("//third_party/riscv-compliance:extensions.bzl", "riscv_compliance")
use_repo(riscv_compliance, "riscv-compliance")

coremark = use_extension("//third_party/coremark:extensions.bzl", "coremark")
use_repo(coremark, "coremark")

xkcp = use_extension("//third_party/xkcp:extensions.bzl", "xkcp")
use_repo(xkcp, "xkcp")

hsm = use_extension("//third_party/hsm:extensions.bzl", "hsm")
use_repo(hsm, "cloud_kms_hsm", "opensc", "sc_hsm", "softhsm2")

nist_cavp = use_extension("//third_party/nist_cavp_testvectors:extensions.bzl", "nist_cavp")
use_repo(
    nist_cavp,
    "nist_cavp_aes_gcm",
    "nist_cavp_aes_kat",
    "nist_cavp_aes_kw_sp_800_38f",
    "nist_cavp_drbg_sp_800_90a_root",
    "nist_cavp_ecdh_sp_800_56a",
    "nist_cavp_ecdsa_fips_186_4",
    "nist_cavp_hmac_fips_198_1",
    "nist_cavp_rsa_fips_186_3",
    "nist_cavp_sha2_fips_180_4",
    "nist_cavp_sha3_fips_202",
    "nist_cavp_shake_fips_202",
)

wycheproof = use_extension("//third_party/wycheproof:extensions.bzl", "wycheproof")
use_repo(wycheproof, "wycheproof")

acvp_testvectors = use_extension("//third_party/acvp_testvectors:extensions.bzl", "acvp_testvectors")
use_repo(acvp_testvectors, "acvp_testvectors")

sphincsplus = use_extension("//third_party/sphincsplus:extensions.bzl", "sphincsplus")
use_repo(
    sphincsplus,
    "sphincsplus_fips205_ipd",
    "sphincsplus_sha256_kat",
    "sphincsplus_shake256_kat",
)

open_dice = use_extension("//third_party/open-dice:extensions.bzl", "open_dice")
use_repo(open_dice, "open-dice")

hyperdebug = use_extension("//third_party/hyperdebug:extensions.bzl", "hyperdebug")
use_repo(hyperdebug, "hyperdebug_firmware")

qemu = use_extension("//third_party/qemu:extensions.bzl", "qemu")
use_repo(qemu, "qemu_opentitan", "qemu_pavona_src")

doxygen = use_extension("//third_party/doxygen:extensions.bzl", "doxygen")
use_repo(doxygen, "doxygen")

mlkem_native = use_extension("//third_party/mlkem_native:extensions.bzl", "mlkem_native")
use_repo(mlkem_native, "mlkem_native")

mldsa_native = use_extension("//third_party/mldsa_native:extensions.bzl", "mldsa_native")
use_repo(mldsa_native, "mldsa_native")

# Verilator
verilator = use_extension("//third_party/verilator:extensions.bzl", "verilator")
use_repo(verilator, "verilator")

# Hooks:
# Extension for linking in externally managed test and provisioning customizations
# for both secure/non-secure manufacturer domains.

hooks = use_extension("//rules:extensions.bzl", "hooks")
hooks.repo(
    name = "manufacturer_test_hooks",
    dummy = "@pavona_pavona//:sw/device/tests/closed_source",
    env = "MANUFACTURER_HOOKS_DIR",
)
hooks.repo(
    name = "secure_manufacturer_test_hooks",
    dummy = "@pavona_pavona//:sw/device/tests/closed_source",
    env = "SECURE_MANUFACTURER_HOOKS_DIR",
)
hooks.repo(
    name = "provisioning_exts",
    dummy = "@pavona_pavona//:sw/device/silicon_creator/manuf/extensions",
    env = "PROV_EXTS_DIR",
)
hooks.repo(
    name = "rom_hooks",
    dummy = "@pavona_pavona//:sw/device/silicon_creator/rom/hooks",
    env = "ROM_HOOKS_DIR",
)
use_repo(
    hooks,
    "manufacturer_test_hooks",
    "provisioning_exts",
    "rom_hooks",
    "secure_manufacturer_test_hooks",
)

# Local toolchains

register_toolchains("//rules/pavona:localtools")

# Register tops
top_desc = use_extension("//hw/top:extensions.bzl", "top")
top_desc.register(
    bazel_file = "//hw/top_egret:defs.bzl",
    top_var = "EGRET",
)
top_desc.register(
    bazel_file = "//hw/top_dragonfly:defs.bzl",
    top_var = "DRAGONFLY",
)
top_desc.register(
    bazel_file = "//hw/top_scafi_deprecated:defs.bzl",
    top_var = "SCAFI_DEPRECATED",
)
use_repo(top_desc, "tops_desc")
